# django-livraria

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose-ssl-init.yml  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml
nginx/prod/: nginx.template
nginx/ssl-init/: nginx.template
senai_testes/: urls.py
senai_testes/app/: settings.py  urls.py
senai_testes/books/: admin.py  apps.py  models.py
senai_testes/books/migrations/: 0001_initial.py  0002_alter_publishingcompany_address_and_more.py
senai_testes/management/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
senai_testes/management/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py  0003_client_seller.py
senai_testes/order/: admin.py  apps.py  models.py
senai_testes/order/migrations/: 0001_initial.py
senai_testes/utils/: actions.py  models.py  settings.py
